--- a/sass/lsx/_footer.scss
+++ b/sass/lsx/_footer.scss
@@ -30,7 +30,7 @@
 		font-size: 15px;
 		line-height: 1.4;
 
-		@media screen and (max-width: 767px) {
+		@media screen and (max-width: 991px) {
 			margin: 50px 0;
 		}
 
